Shops alignment fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -196,10 +196,14 @@ footer .input-group-text {
 
 
 .prod-image{
-  width:60%;
+  aspect-ratio: 3/3;
 }
 
-
+.prod-image img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 
 /* home wrapper 2 */
